--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "prisma:turbo": "dotenv -- turbo run prisma",
     "release": "changeset publish",
     "solhint:cmd": "solhint \"contracts/**/*.sol\" --noPrompt",
-    "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
-    "solhint:lint": "solhint \"contracts/**/*.sol\"",
+    "solhint:fix": "solhint \"contracts/**/*.sol\" --noPrompt --fix",
+    "solhint:lint": "solhint \"contracts/**/*.sol\" --noPrompt",
     "sort-package-json:fix": "sort-package-json \"{apps,configurations,contracts,crates,fastlane,ios,packages,pods}/**/package.json\"",
     "taplo:cmd": "taplo format *.toml crates/**/Cargo.toml fly/**/fly.toml",
     "taplo:fix": "taplo format *.toml crates/**/Cargo.toml fly/**/fly.toml",
