--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -13,6 +13,7 @@
   axum = { workspace = true }
   ethers = { workspace = true }
   eyre = { workspace = true }
+  lightdotso-contracts = { workspace = true }
   lightdotso-graphql = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
