--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -16,6 +16,7 @@
   insta = "1.17"
   lazy_static = { workspace = true }
   lightdotso-common = { workspace = true }
+  lightdotso-contracts = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { version = "0.11", features = ["json", "blocking"] }
