feat: ini graphql polling update (#858)
* fix: cla

* fix: subgraph versioning

* Update cla.yml

Signed-off-by: Shun Kakinoki <39187513+shunkakinoki@users.noreply.github.com>

* feat: ini graphql polling

* chore: update

* feat: ini conversion traits

* perf: ini trait construct

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: ini log traits

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* feat: ini types contracts init

* chore: update

* chore: update

* chore: update schema prisma

* perf: ini upsert logs

---------

Signed-off-by: Shun Kakinoki <39187513+shunkakinoki@users.noreply.github.com>

--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -11,9 +11,13 @@
 [dependencies]
   cynic = { version = "3.2.2", features = ["http-reqwest-blocking"] }
   cynic-codegen = { version = "3.2.2" }
+  ethers = { workspace = true }
   eyre = { workspace = true }
   insta = "1.17"
   lazy_static = { workspace = true }
+  lightdotso-common = { workspace = true }
+  lightdotso-contracts = { workspace = true }
+  lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { version = "0.11", features = ["json", "blocking"] }
   tokio = { workspace = true }
