--- a/fly/polling/fly.toml
+++ b/fly/polling/fly.toml
@@ -20,15 +20,15 @@ kill_timeout = "5s"
   auto_start_machines = true
   min_machines_running = 1
 
-[checks]
-  [checks.health]
-    port = 9091
-    type = "http"
-    interval = "15s"
-    timeout = "10s"
-    grace_period = "30s"
-    method = "get"
-    path = "/health"
+  # [checks]
+  #   [checks.health]
+  #     port = 9091
+  #     type = "http"
+  #     interval = "15s"
+  #     timeout = "10s"
+  #     grace_period = "30s"
+  #     method = "get"
+  #     path = "/health"
 
 [[metrics]]
   port = 9091
