feat: ini inngest

--- a/apps/app/.env.development
+++ b/apps/app/.env.development
@@ -6,3 +6,4 @@ LOCAL_ENV="dev"
 NEXT_PUBLIC_LOCAL_ENV="dev"
 LIGHT_ADMIN_TOKEN="dev"
 NEXT_PUBLIC_LIGHT_ADMIN_TOKEN="dev"
+INNGEST_EVENT_KEY="local"
