--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.77.0",
     "@sentry/nextjs": "^7.77.0",
+    "@sentry/node": "^7.77.0",
     "@tanstack/react-query": "5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "@tanstack/react-query-next-experimental": "^5.5.0",
