--- a/apps/app/.env.development
+++ b/apps/app/.env.development
@@ -1,4 +1,3 @@
-DATABASE_URL="postgresql://postgres:password@localhost:6500/neon"
 NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="secret"
 VERCEL_ENV="development"
@@ -6,3 +5,4 @@ LOCAL_ENV="dev"
 NEXT_PUBLIC_LOCAL_ENV="dev"
 LIGHT_ADMIN_TOKEN="dev"
 NEXT_PUBLIC_LIGHT_ADMIN_TOKEN="dev"
+INNGEST_EVENT_KEY="local"
