--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -14,7 +14,9 @@
   "author": "Light, Inc.",
   "scripts": {
     "build": "next build || true",
-    "dev": "next dev -p 3001",
+    "dev": "concurrently \"pnpm:dev:*\"",
+    "dev:inngest": "inngest dev -u http://localhost:3001/api/inngest",
+    "dev:next": "next dev -p 3001",
     "lint": "next lint",
     "start": "next start"
   },
@@ -43,6 +45,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.77.0",
     "@sentry/nextjs": "^7.77.0",
+    "@sentry/node": "^7.77.0",
     "@tanstack/react-query": "5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "@tanstack/react-query-next-experimental": "^5.5.0",
@@ -86,6 +89,7 @@
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
+    "inngest-cli": "^0.20.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
