--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -54,6 +54,7 @@
     "@vercel/toolbar": "^0.1.5",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "exponential-backoff": "^3.1.1",
     "framer-motion": "^10.16.4",
