--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.23.3",
+    "@covalenthq/client-sdk": "^0.6.3",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@lightdotso/client": "workspace:*",
