--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -41,6 +41,7 @@
     "@opentelemetry/sdk-node": "^0.45.1",
     "@opentelemetry/sdk-trace-node": "^1.18.1",
     "@opentelemetry/semantic-conventions": "^1.18.1",
+    "@popperjs/core": "^2.11.8",
     "@prisma/client": "^5.5.2",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.5.2",
     "@radix-ui/react-icons": "^1.3.0",
