--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.23.3",
+    "@covalenthq/client-sdk": "^0.6.3",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
     "@lightdotso/client": "workspace:*",
@@ -40,6 +41,7 @@
     "@opentelemetry/sdk-node": "^0.45.1",
     "@opentelemetry/sdk-trace-node": "^1.18.1",
     "@opentelemetry/semantic-conventions": "^1.18.1",
+    "@popperjs/core": "^2.11.8",
     "@prisma/client": "^5.5.2",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.5.2",
     "@radix-ui/react-icons": "^1.3.0",
