chore: deprecate kysley

--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:password@localhost:6500/neon"
+DATABASE_URL="mysql://dev:dev@localhost:3306/lightdotso"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="secret"
 VERCEL_ENV="development"
