--- a/apps/explorer/.env.development
+++ b/apps/explorer/.env.development
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:password@localhost:6500/neon"
+DATABASE_URL="mysql://dev:dev@localhost:3306/lightdotso"
 NEXTAUTH_URL="http://localhost:3003"
 VERCEL_ENV="development"
