--- a/configurations/prisma/.env.development
+++ b/configurations/prisma/.env.development
@@ -1,3 +1,3 @@
 DATABASE_PORT=6500
-DATABASE_URL="postgresql://postgres:password@localhost:6500/neon?schema=public"
-DIRECT_DATABASE_URL="postgresql://postgres:password@localhost:6500/neon?schema=public"
+DATABASE_URL="mysql://dev:dev@localhost:3306/lightdotso"
+DIRECT_DATABASE_URL="mysql://dev:dev@localhost:3306/lightdotso"
