--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -101,6 +101,7 @@ jobs:
             fastlane/test_output/LightWalletUITests.xcresult
           show-passed-tests: false
       - name: Convert Xcresult
+        continue-on-error: true
         run: |
           xcresultparser \
             --output-format cobertura \
