--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -76,6 +76,7 @@
     "prisma": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
     "server-only": "^0.0.1",
     "siwe": "^2.1.4",
