feat: ini kafka consumer

--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -10,6 +10,9 @@
         "LIGHT_ADMIN_TOKEN",
         "LIGHT_RPC_TOKEN",
         "LOCAL_ENV",
+        "KAFKA_BROKER",
+        "KAFKA_PASSWORD",
+        "KAFKA_USERNAME",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
         "NEXT_PUBLIC_LIGHT_ADMIN_TOKEN",
