--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -53,6 +53,7 @@
     "@tanstack/react-query-next-experimental": "^5.8.4",
     "@tremor/react": "^3.11.1",
     "@types/lodash": "^4.14.201",
+    "@upstash/kafka": "^1.3.4-canary.1",
     "@upstash/redis": "^1.25.1",
     "@vercel/toolbar": "^0.1.5",
     "clsx": "^2.0.0",
