--- a/fly/rpc-internal/fly.toml
+++ b/fly/rpc-internal/fly.toml
@@ -18,7 +18,7 @@ kill_timeout = "5s"
   strategy = "bluegreen"
 
 [http_service]
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 2
 
