--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -100,6 +100,7 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
     "@storybook/testing-library": "0.2.2",
+    "@storybook/theming": "^7.5.3",
     "@types/node": "^20.9.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -107,6 +108,7 @@
     "postcss": "^8.4.31",
     "shadcn-ui": "^0.4.1",
     "storybook": "^7.5.3",
+    "storybook-dark-mode": "^3.0.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "unist-builder": "^4.0.0",
