--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -57,9 +57,9 @@
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.9.1",
     "assemblyscript": "^0.19.20",
-    "matchstick-as": "0.6.0",
+    "matchstick-as": "^0.6.0",
     "typescript": "^5.2.2",
-    "wabt": "1.0.32"
+    "wabt": "^1.0.32"
   },
   "publishConfig": {
     "access": "restricted"
