--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -95,11 +95,11 @@
     "@storybook/channel-websocket": "^7.5.3",
     "@storybook/client-api": "^7.5.3",
     "@storybook/nextjs": "^7.5.3",
-    "@storybook/preview-api": "7.5.3",
+    "@storybook/preview-api": "^7.5.3",
     "@storybook/preview-web": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/react-vite": "^7.5.3",
-    "@storybook/testing-library": "0.2.2",
+    "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^7.5.3",
     "@types/node": "^20.9.1",
     "@types/react": "^18.2.37",
