--- a/configurations/eslint/package.json
+++ b/configurations/eslint/package.json
@@ -29,11 +29,11 @@
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-neverthrow": "^1.1.4",
-    "eslint-plugin-prettier": "5.0.1",
-    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "3.13.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "next": "^14.0.3"
   },
   "publishConfig": {
