--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
-    "@viem/anvil": "0.0.6",
+    "@viem/anvil": "^0.0.6",
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
     "@wagmi/cli": "^1.5.2",
@@ -128,11 +128,11 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-tailwindcss": "3.13.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "git-cz": "^4.9.0",
     "hardhat": "^2.19.1",
     "husky": "^8.0.3",
@@ -149,7 +149,7 @@
     "release-it": "^17.0.0",
     "rimraf": "^5.0.5",
     "solhint": "^4.0.0",
-    "solidity-docgen": "0.6.0-beta.36",
+    "solidity-docgen": "^0.6.0-beta.36",
     "sort-package-json": "^2.6.0",
     "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
