--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -48,7 +48,7 @@
     "@sentry/integrations": "^7.80.1",
     "@sentry/nextjs": "^7.80.1",
     "@sentry/node": "^7.80.1",
-    "@tanstack/react-query": "5.8.4",
+    "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
     "@tanstack/react-query-next-experimental": "^5.8.4",
     "@tremor/react": "^3.11.1",
