--- a/apps/changelog/package.json
+++ b/apps/changelog/package.json
@@ -23,12 +23,12 @@
     "@babel/core": "^7.23.3",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "14.0.3",
+    "@next/mdx": "^14.0.3",
     "@sentry/integrations": "^7.80.1",
     "@sentry/nextjs": "^7.80.1",
-    "@types/node": "20.9.0",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.0.0",
@@ -36,10 +36,10 @@
     "mdast-util-to-string": "^4.0.0",
     "mdx-annotations": "^0.1.4",
     "motion": "^10.16.4",
-    "next": "14.0.3",
+    "next": "^14.0.3",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recma-import-images": "^0.0.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
@@ -48,7 +48,7 @@
     "remark-unwrap-images": "^4.0.0",
     "shiki": "^0.14.5",
     "tailwindcss": "^3.3.5",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
