--- a/configurations/prisma/package.json
+++ b/configurations/prisma/package.json
@@ -37,7 +37,7 @@
     "studio:dev": "dotenv -e .env.development prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "5.6.0",
+    "@prisma/client": "^5.6.0",
     "kysely-postgres-js": "^2.0.0",
     "postgres": "^3.4.3",
     "prisma": "^5.6.0",
