--- a/configurations/tailwindcss/package.json
+++ b/configurations/tailwindcss/package.json
@@ -28,7 +28,7 @@
     "tailwind-config-viewer": "^1.7.3",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "windy-radix-palette": "1.0.0"
+    "windy-radix-palette": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
