--- a/packages/popup/package.json
+++ b/packages/popup/package.json
@@ -41,7 +41,7 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": "5.2.2"
+    "typescript": "^5.2.2"
   },
   "publishConfig": {
     "access": "restricted"
