--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -44,6 +44,7 @@
     "@popperjs/core": "^2.11.8",
     "@prisma/client": "^5.6.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.6.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.80.1",
     "@sentry/nextjs": "^7.80.1",
@@ -51,6 +52,7 @@
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.8.4",
     "@tanstack/react-query-next-experimental": "^5.8.4",
+    "@tanstack/react-table": "^8.10.7",
     "@tremor/react": "^3.11.1",
     "@types/lodash": "^4.14.201",
     "@upstash/kafka": "^1.3.4-canary.1",
