--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,11 +12,10 @@
   },
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
   "files": [
-    "dist/**"
+    "dist/**",
+    "src/**"
   ],
   "scripts": {
     "build": "tsup",
@@ -25,7 +24,9 @@
     "generate:light": "npx openapi-typescript https://api.light.so/api-docs/openapi.json -o ./src/v1.d.ts",
     "generate:local": "pnpm run generate:local-api && pnpm run generate:prepare",
     "generate:local-api": "npx openapi-typescript http://localhost:3000/api-docs/openapi.json -o ./src/v1.d.ts",
-    "generate:prepare": "./prepend.sh"
+    "generate:prepare": "./prepend.sh",
+    "prepack": "clean-package",
+    "postpack": "clean-package restore"
   },
   "dependencies": {
     "@lightdotso/schemas": "workspace:*",
@@ -43,5 +44,6 @@
   },
   "publishConfig": {
     "access": "restricted"
-  }
+  },
+  "clean-package": "../../clean-package.config.json"
 }
