--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -35,6 +35,7 @@
     "@lightdotso/ui": "workspace:*",
     "@lightdotso/utils": "workspace:*",
     "@lightdotso/wagmi": "workspace:*",
+    "@lukemorales/query-key-factory": "^1.3.2",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.1",
     "@opentelemetry/resources": "^1.18.1",
