--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -75,6 +75,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.12.2",
+    "permissionless": "^0.0.12",
     "postgres": "^3.4.3",
     "prisma": "^5.6.0",
     "react": "^18.2.0",
