--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -16,7 +16,8 @@
     "build": "next build",
     "dev": "next dev -p 3003",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@babel/core": "^7.23.3",
