--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -24,7 +24,8 @@
     "start": "next start",
     "test-dev": "start-server-and-test dev 3000 test:e2e",
     "test-start": "start-server-and-test start 3000 test:e2e",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@babel/core": "^7.23.3",
