--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -21,7 +21,8 @@
     "build": "tsup",
     "clean": "rimraf -rf dist",
     "prepack": "clean-package",
-    "postpack": "clean-package restore"
+    "postpack": "clean-package restore",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "zod": "^3.22.4"
