--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -21,7 +21,8 @@
     "build": "tsup",
     "clean": "rimraf -rf dist",
     "prepack": "clean-package",
-    "postpack": "clean-package restore"
+    "postpack": "clean-package restore",
+    "tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@types/firefox-webext-browser": "^120.0.0",
