feat: ini calldata (#953)
* chore: ini calldata components

* chore: add parsers

* chore: update

* feat: ini op confirm

* feat: ini handler

* chore: rename confirm cards

* chore: ini types userOperation

* chore: refactor data schema

* fix: types schema

* chore: update

* chore: update transactions user operations naming

* fix: float parsing

* fix: float parsing

* chore: update

* chore: update

* chore: update

* chore: update

* fix: changelog

* fix: utils path

* chore: update

* chore: ini turbo tsc

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/foundry.toml
+++ b/foundry.toml
@@ -56,7 +56,6 @@
   test = "contracts/script/test"
   fs_permissions = [{ access = "read-write", path = "./tmp.json" }]
 
-
   [profile.script.optimizer_details]
     constantOptimizer = false
     yul = false
@@ -71,6 +70,12 @@
     [profile.smt.model_checker.contracts]
       "contracts/src/LightWallet.sol" = ["LightWallet"]
       "contracts/src/LightWalletFactory.sol" = ["LightWalletFactory"]
+
+[fmt]
+  ignore = [
+    "contracts/src/LightWallet.sol",
+    "contracts/src/LightWalletFactory.sol",
+  ]
 
 [doc]
   ignore = ["**/*.t.sol"]
