--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -60,6 +60,7 @@
     "@upstash/kafka": "^1.3.4-canary.1",
     "@upstash/redis": "^1.25.1",
     "@vercel/toolbar": "^0.1.5",
+    "@wagmi/core": "^1.4.7",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
     "copy-to-clipboard": "^3.3.3",
