--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -15,6 +15,7 @@
   eyre = { workspace = true }
   lightdotso-contracts = { workspace = true }
   lightdotso-graphql = { workspace = true }
+  lightdotso-paymaster = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
