--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: EntryPointv0.6.0
-    network: matic
+    network: sepolia
     source:
       abi: EntryPoint
       address: "0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789"
-      startBlock: 48173548
+      startBlock: 3257815
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
