feat: ini simplehash api

--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -24,6 +24,7 @@
         "NEXT_PUBLIC_VERCEL_URL",
         "NEXT_RUNTIME",
         "SENTRY_DSN",
+        "SIMPLEHASH_API_KEY",
         "UPSTASH_REST_API_DOMAIN",
         "UPSTASH_REST_API_TOKEN",
         "VERCEL_ENV"
