--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -62,6 +62,7 @@
     "@upstash/redis": "^1.25.1",
     "@vercel/toolbar": "^0.1.5",
     "@wagmi/core": "^1.4.7",
+    "blurhash": "^2.0.5",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
     "copy-to-clipboard": "^3.3.3",
@@ -82,6 +83,7 @@
     "postgres": "^3.4.3",
     "prisma": "^5.6.0",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
