feat: ini nft send (#1002)
* fix: disable auth routing

* feat: ini send state

* feat: ini nft image

* fix: nft card

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -31,6 +31,7 @@
     "@lightdotso/kysely": "workspace:*",
     "@lightdotso/next-auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
+    "@lightdotso/schemas": "workspace:*",
     "@lightdotso/solutions": "workspace:*",
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/ui": "workspace:*",
@@ -61,6 +62,7 @@
     "@upstash/redis": "^1.25.1",
     "@vercel/toolbar": "^0.1.5",
     "@wagmi/core": "^1.4.7",
+    "blurhash": "^2.0.5",
     "clsx": "^2.0.0",
     "connectkit": "^1.5.3",
     "copy-to-clipboard": "^3.3.3",
@@ -81,6 +83,7 @@
     "postgres": "^3.4.3",
     "prisma": "^5.6.0",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-hook-form": "^7.48.2",
